--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "guessthespotifysong",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build && mv public/manifest.json manifest.json",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.19"
   }
 }
