--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19"
+    "autoprefixer": "^10.4.19",
+    "react-dom": "^18.2.0"
   }
 }
